# mrsdk

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  setup.py
examples/: advanced_usage.py  basic_usage.py
mrsdk/: __init__.py  cli.py  client.py  exceptions.py
tests/: __init__.py  test_client.py
