[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrsdk"
version = "0.3.1"
authors = [
    {name = "MindRoot Team", email = "info@mindroot.ai"},
]
description = "Python SDK for the MindRoot API"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://github.com/mindroot/mindroot-python-sdk"
"Bug Tracker" = "https://github.com/mindroot/mindroot-python-sdk/issues"

[project.scripts]
mrsdk = "mrsdk.cli:main"
